--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,6 +16,8 @@
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+  {{!-- Google Fonts --}}
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Paytone+One" rel="stylesheet">
 
   <title>What's for dinner?</title>
 </head>
@@ -32,11 +34,9 @@
   </section>
 
   <div class="container">
-
     {{!-- Row for the eating in or out question. Will also show a stat --}}
     <div class="row text-center" id="inout-card">
       <div class="col-md-9 mb-4">
-
         <div class="card text-center shadow-lg">
           <div class="card-header text-white bg-warning">
             <h4>Stay in or go out?</h4>
@@ -90,10 +90,10 @@
       {{!-- location and zip relevant user stats --}}
       <div class="col-md-3 mb-4">
         <div class="card text-center shadow-lg text-white bg-info" style="height:270px;max-width: 18rem;">
-          <div class="card-header">Header</div>
+          <div class="card-header">Quick Stat</div>
           <div class="card-body">
-            <h5 class="card-title">Analytics</h5>
-            <p class="card-text">Will go here</p>
+            <h5 class="card-title">Soon you will know</h5>
+            <p class="card-text">the most popular locations!</p>
           </div>
         </div>
       </div>
@@ -145,28 +145,23 @@
       {{!-- eating out stat on user categories chosen card --}}
       <div class="col-md-3 mb-4">
         <div class="card text-center shadow-lg text-white bg-info" style="height:295px;max-width: 18rem;">
-          <div class="card-header">Header</div>
+          <div class="card-header">Quick Stat</div>
           <div class="card-body">
-            <h5 class="card-title">Analytics</h5>
-            <p class="card-text">Will go here</p>
+            <h5 class="card-title">Soon you will know</h5>
+            <p class="card-text">the most popular categories!</p>
           </div>
         </div>
       </div>
     </div>
-
-
-
     {{!-- eating out spend card --}}
     <div class="row text-center" id="spend-card">
       <div class="col-md-9 mb-4">
-
         <div class="card text-center shadow-lg">
           <div class="card-header text-white bg-info">
             <h4>How much are you looking to spend?</h4>
           </div>
           <div class="card-body">
             <h5 class="card-title">Please choose a price range:</h5>
-
             <div class="btn-group btn-group-toggle p-2" data-toggle="buttons">
               <label class="btn btn-outline-info mr-2">
                 <input type="radio" name="outSpend" value="1" id="outSpend1" autocomplete="off"> $
@@ -191,60 +186,48 @@
           </div>
         </div>
       </div>
-
       {{!-- eating out user stat on how much people are choosing to spend card --}}
       <div class="col-md-3 mb-4">
         <div class="card text-center shadow-lg text-white bg-info" style="height:295px;max-width: 18rem;">
-          <div class="card-header">Header</div>
+          <div class="card-header">Quick Stat</div>
           <div class="card-body">
-            <h5 class="card-title">Analytics</h5>
-            <p class="card-text">Will go here</p>
+            <h5 class="card-title">Soon you will know</h5>
+            <p class="card-text">the most popular spend amounts!</p>
           </div>
         </div>
       </div>
     </div>
-
-
-
-
     {{!-- eating out results card. user will go through results from yelp api and choose winner --}}
+    <div class="row text-center mb-5" id="results-card-head">
+      <div class="col-md-12" id="result-header">
+        <h1 class="text-center text-white bg-info p-5">'X' out the one you don't want!</h1>
+      </div>
+    </div>
+    {{!-- place holders for the yelp results. --}}
     <div class="row text-center" id="results-card">
       <div class="col-md-6" id="result1">
-
       </div>
       <div class="col-md-6" id="result2">
-
       </div>
       <div class="col-md-6" id="result3">
-
       </div>
       <div class="col-md-6" id="result4">
-
       </div>
       <div class="col-md-6" id="result5">
-
       </div>
       <div class="col-md-6" id="result6">
-
       </div>
       <div class="col-md-6" id="result7">
-
       </div>
       <div class="col-md-6" id="result8">
-
       </div>
       <div class="col-md-6" id="result9">
-
       </div>
       <div class="col-md-6" id="result10">
-
       </div>
-
     </div>
-
     {{!-- animation for loading screen between last question and results card --}}
     <div class="loading-screen">
-
       <div class="loading">
         <div class="loading__element el1">G</div>
         <div class="loading__element el2">E</div>
@@ -254,7 +237,6 @@
         <div class="loading__element el6">N</div>
         <div class="loading__element el7">G</div>
       </div>
-
       <div class="loading">
         <div class="loading__element el1">H</div>
         <div class="loading__element el2">U</div>
@@ -263,12 +245,10 @@
         <div class="loading__element el5">R</div>
         <div class="loading__element el6">Y</div>
         <div class="loading__element el7">?</div>
-        {{!-- <div class="loading__element el8">E</div>
-        <div class="loading__element el9">S</div> --}}
       </div>
     </div>
 
-
+    {{!-- animation that stays at bottom and cycles through --}}
     <section class="jumbotron text-center shadow-lg bg-info" style="color:white">
       <div class="container">
         <div class="row">
@@ -282,64 +262,50 @@
     </section>
   </div>
 
+  {{!-- JS --}}
   <script type="text/javascript">
 
+    // hides everything needed at start of app or start over
     var startApp = function () {
-      $("#location-card, #category-card, #spend-card, #results-card, .loading-screen, #result3, #result4, #result5, #result6, #result7, #result8, #result9, #result10").hide();
+      $("#location-card, #category-card, #spend-card, #results-card, .loading-screen, #result3, #result4, #result5, #result6, #result7, #result8, #result9, #result10, #results-card-head").hide();
     };
-
-
+    // object holding users answers
     var answers = {
       inorout: "",
       zipcode: "",
       category: "",
       spend: "",
     }
-
+    // handles users answers, posts, then handles logic of putting yelp response in html
     var submitOutAnswers = function () {
-
-      // AJAX post the data to the out API.
       $.post("/api/out", answers, function (res) {
-
         console.log("Submitted: ", answers);
-
         console.log("This is the submit button response: " + JSON.stringify(res.yelpBusinesses));
         var xIndex = 1;
-
         console.log("This is res.length: " + res.yelpBusinesses.length);
-
         cards = res.yelpBusinesses.length;
-
         for (var i = 0; i < res.yelpBusinesses.length; i++) {
-
-
           var name = res.yelpBusinesses[i].name;
           var image = res.yelpBusinesses[i].image_url;
           var url = res.yelpBusinesses[i].url;
           var rating = res.yelpBusinesses[i].rating;
           var price = res.yelpBusinesses[i].price;
-
-
           // creaiton of elements
-          var resultsCard = $('<div class="card text-center shadow-lg mb-4"><div class="card-header text-black bg-info"><h5 class="card-title">' + name + '</h5><div class="card-body"><ul class="list-group shadow-lg"><li class="list-group-item"><img src="' + image + '" height="250px" width="250px"></li><li class="list-group-item"><p>Price:' + price + '</p></li><li class="list-group-item"><p>Rating:' + rating + '</p></li><li class="list-group-item"><a href="' + url + '" target="_blank">SEE YELP PAGE</a></li></ul><button type=submit id="result' + xIndex + '"class="result-xbutton btn btn-danger btn-lg mt-3 mb-3"><i class="far fa-times-circle"></i></button><div class="card-footer text-muted text-right"><a class="btn-sm btn-outline-warning startover-button" style="height:10px" href="/" role="button">Start Over</a></div></div></div></div>');
-
+          var resultsCard = $('<div class="card text-center shadow-lg mb-4"><div class="card-header text-black bg-info"><h5 class="card-title">' + name + '</h5><div class="card-body"><ul class="list-group shadow-lg"><li class="list-group-item"><img src="' + image + '" height="250px" width="300px"></li><li class="list-group-item"><p>Price:' + price + '</p></li><li class="list-group-item"><p>Rating:' + rating + '</p></li><li class="list-group-item"><a href="' + url + '" target="_blank">SEE YELP PAGE</a></li></ul><button type=submit id="result' + xIndex + '"class="result-xbutton btn btn-danger btn-lg mt-3 mb-3"><i class="far fa-times-circle"></i></button><div class="card-footer text-muted text-right"><a class="btn-sm btn-outline-warning startover-button" style="height:10px" href="/" role="button">Start Over</a></div></div></div></div>');
           $('#result' + xIndex).prepend(resultsCard);
-
           xIndex++
         }
-
-        $("#results-card").delay(5000).fadeIn(1000);
+        $("#results-card, #results-card-head").delay(5000).fadeIn(1000);
       });
     };
-
+    // logic for loading animation, waits 5 seconds to simulate the call for yelp data
     var loading = function () {
       $(".loading-screen").show(); setTimeout(function () { $(".loading-screen").hide(); }, 5000);
       submitOutAnswers();
     };
 
-
+    // on doc ready starts app and assigns click handlers on buttons
     $(document).ready(function () {
-
       startApp();
 
       $("#inout-button").on("click", function (event) {
@@ -351,7 +317,6 @@
 
       $("#zipcode-button").on("click", function (event) {
         event.preventDefault();
-
         answers.zipcode = $("#zipcode-form").val().trim();
         console.log(answers.zipcode)
         $("#location-card").hide("slow");
@@ -360,7 +325,6 @@
 
       $("#category-button").on("click", function (event) {
         event.preventDefault();
-
         answers.category = $('input[name=outCategory]:checked').val();
         console.log(answers.category)
         $("#category-card").hide("slow");
@@ -375,24 +339,20 @@
         console.log(answers)
         loading();
       });
-
     });
 
+    // holds total number of businesses in responses from yelp in cards and starts a index to count flips through those cards
     var cards;
     var nextCardIndex = 3;
-
+    // handles logic to allow user to 'x' cards and flip through to the next one until they are all gone and a winner has been established
     var flipCards = function () {
       event.preventDefault();
-
       console.log("this is this outside x button");
       console.log(this.id);
       console.log("cards: " + cards);
       console.log("next card index: " + nextCardIndex);
-
       if (nextCardIndex <= cards) {
-
         var hide = ("#" + this.id);
-
         $(hide).hide();
         console.log("this is this inside x button" + this);
         $('#result' + nextCardIndex).show("slow");
@@ -402,12 +362,11 @@
         var hide = ("#" + this.id);
         $(hide).hide();
         nextCardIndex = 3;
-        var winner = $('<div class="col-md-6"><h1>WINNER!</h1></div>')
-        $('#results-card').prepend(winner);
-        // the card that's left is your result
+        var winner = $('<div class="col-md-6 winner"><h1>WINNER!</h1></div>')
+        $('#result-header').append(winner);
       }
     };
-
+    // click handler for all the x buttons created dynamically
     $(document).on('click', '.result-xbutton', flipCards);
 
   </script>
